# defect-dojo-reporting

./: Cargo.toml  README.md
src/: main.rs
src/config/: configuration.rs  mod.rs
src/connectors/: microsoft_teams.rs  mod.rs
src/defect_dojo/: defect_dojo.rs  engagements.rs  findings.rs  findings_summary.rs  mirror.rs  mod.rs  product_summary.rs  products.rs  test_imports.rs  tests.rs
