[package]
name = "defect-dojo-reporting"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
log = "0.4.14"
env_logger = "0.9.0"
reqwest = { version = "0.11.4", features = ["blocking"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.81"
serde = {version = "1.0.137", features = ["derive"]}